Continued implementation of Sunfire & Harbinger unique weapons.

--- a/common/src/main/resources/assets/simplyswords/lang/en_us.json
+++ b/common/src/main/resources/assets/simplyswords/lang/en_us.json
@@ -104,9 +104,9 @@
   "item.simplyswords.shadowsting": "Shadowsting",
   "item.simplyswords.harbinger": "Harbinger",
   "item.simplyswords.sunfire": "Sunfire",
-  "item.simplyswords.dormantrelic": "Dormant Relic",
-  "item.simplyswords.taintedrelic": "Tainted Relic",
-  "item.simplyswords.righteousrelic": "Righteous Relic",
+  "item.simplyswords.dormant_relic": "Dormant Relic",
+  "item.simplyswords.tainted_relic": "Tainted Relic",
+  "item.simplyswords.righteous_relic": "Righteous Relic",
 
 
   "item.simplyswords.runic_tablet": "Runic Tablet",
