Continued implementation of unique katana: Whisperwind

--- a/common/src/main/resources/assets/simplyswords/lang/en_us.json
+++ b/common/src/main/resources/assets/simplyswords/lang/en_us.json
@@ -107,6 +107,7 @@
   "item.simplyswords.dormant_relic": "Dormant Relic",
   "item.simplyswords.tainted_relic": "Tainted Relic",
   "item.simplyswords.righteous_relic": "Righteous Relic",
+  "item.simplyswords.whisperwind": "Whisperwind",
 
 
   "item.simplyswords.runic_tablet": "Runic Tablet",
