--- a/common/src/main/resources/assets/simplyswords/lang/en_us.json
+++ b/common/src/main/resources/assets/simplyswords/lang/en_us.json
@@ -684,9 +684,13 @@
   "item.simplyswords.sunfiresworditem.tooltip6": "to friendly players within its vicinity.",
 
   "item.simplyswords.whisperwindsworditem.tooltip1": "Unique Effect: Fatal Flicker",
-  "item.simplyswords.whisperwindsworditem.tooltip2": "Chance on hit to evade backwards and\nreset Flicker Strike's cooldown.",
-  "item.simplyswords.whisperwindsworditem.tooltip3": "Perform three forward dashes in quick\nsuccession, avoiding damage\nand inflicting enemies in your path\nwith Echo.",
-  "item.simplyswords.whisperwindsworditem.tooltip4": "For every target hit by a dash, the\n amount of Echo you inflict is\nincreased.",
+  "item.simplyswords.whisperwindsworditem.tooltip2": "Chance on hit to refresh ability cooldown.",
+  "item.simplyswords.whisperwindsworditem.tooltip3": "Perform a swift forward dash, gaining",
+  "item.simplyswords.whisperwindsworditem.tooltip4": "resistance and absorption, and inflicting",
+  "item.simplyswords.whisperwindsworditem.tooltip5": "enemies in your path with Echo.",
+  "item.simplyswords.whisperwindsworditem.tooltip6": "For every target hit by the dash, the",
+  "item.simplyswords.whisperwindsworditem.tooltip7": "amount of Echo you inflict is increased.",
+
 
   "item.simplyswords.dormantrelicsworditem.tooltip2": "A faint power seems to emanate from within.",
   "item.simplyswords.poweredrelicsworditem.tooltip2": "A growing power seems to emanate from within.",
