--- a/common/src/main/resources/assets/simplyswords/lang/en_us.json
+++ b/common/src/main/resources/assets/simplyswords/lang/en_us.json
@@ -772,6 +772,10 @@
   "item.simplyswords.immolationsworditem.tooltip4": "damage scales with your current HP.",
   "item.simplyswords.unidentifiedsworditem.tooltip1": "Runic Power: ????",
   "item.simplyswords.unidentifiedsworditem.tooltip2": "Click to identify.",
+  "item.simplyswords.runic_tablet.tooltip": "Can be used to craft and",
+  "item.simplyswords.runic_tablet.tooltip2": "re-roll Runic weapons.",
+  "item.simplyswords.runic_tablet.tooltip3": "Can also be used to repair",
+  "item.simplyswords.runic_tablet.tooltip4": "Unique weapons.",
 
 
 
@@ -806,6 +810,8 @@
   "item.simplyswords.uniquesworditem.netherfused_power.nullification.description5": "enemies within its vicinity.",
 
   "item.simplyswords.common.blacklisteffect": "ABILITY DISABLED",
+  "item.simplyswords.compat.mythicmetals.regrowth": "Regrowth",
+  "item.simplyswords.compat.mythicmetals.looting": "Bonus Looting",
 
   "entity.simplyswords.battlestandard.name": "%d's Battle Standard"
 }
