--- a/src/main/resources/assets/simplyswords/lang/ko_kr.json
+++ b/src/main/resources/assets/simplyswords/lang/ko_kr.json
@@ -379,50 +379,50 @@
   "item.simplyswords.mythicmetals_compat.durasteel.durasteel_greathammer": "듀라스틸 그레이트 해머",
 
 
-  "item.simplyswords.gobber_compat.gobber.gobber_claymore": "Gobber Claymore",
-  "item.simplyswords.gobber_compat.gobber.gobber_cutlass": "Gobber Cutlass",
-  "item.simplyswords.gobber_compat.gobber.gobber_glaive": "Gobber Glaive",
-  "item.simplyswords.gobber_compat.gobber.gobber_katana": "Gobber Katana",
-  "item.simplyswords.gobber_compat.gobber.gobber_longsword": "Gobber Longsword",
-  "item.simplyswords.gobber_compat.gobber.gobber_rapier": "Gobber Rapier",
-  "item.simplyswords.gobber_compat.gobber.gobber_sai": "Gobber Sai",
-  "item.simplyswords.gobber_compat.gobber.gobber_spear": "Gobber Spear",
-  "item.simplyswords.gobber_compat.gobber.gobber_twinblade": "Gobber Twinblade",
-  "item.simplyswords.gobber_compat.gobber.gobber_warglaive": "Gobber Warglaive",
-  "item.simplyswords.gobber_compat.gobber.gobber_greathammer": "Gobber Greathammer",
-  "item.simplyswords.gobber_compat.gobber.gobber_greataxe": "Gobber Greataxe",
-  "item.simplyswords.gobber_compat.gobber.gobber_chakram": "Gobber Chakram",
-  "item.simplyswords.gobber_compat.gobber.gobber_scythe": "Gobber Scythe",
+  "item.simplyswords.gobber_compat.gobber.gobber_claymore": "고버 클레이모어",
+  "item.simplyswords.gobber_compat.gobber.gobber_cutlass": "고버 커틀러스",
+  "item.simplyswords.gobber_compat.gobber.gobber_glaive": "고버 글레이브",
+  "item.simplyswords.gobber_compat.gobber.gobber_katana": "고버 카타나",
+  "item.simplyswords.gobber_compat.gobber.gobber_longsword": "고버 롱소드",
+  "item.simplyswords.gobber_compat.gobber.gobber_rapier": "고버 레이피어",
+  "item.simplyswords.gobber_compat.gobber.gobber_sai": "고버 사이i",
+  "item.simplyswords.gobber_compat.gobber.gobber_spear": "고버 창",
+  "item.simplyswords.gobber_compat.gobber.gobber_twinblade": "고버 쌍날검 ",
+  "item.simplyswords.gobber_compat.gobber.gobber_warglaive": "고버 워글레이브",
+  "item.simplyswords.gobber_compat.gobber.gobber_greathammer": "고버 그레이트 해머",
+  "item.simplyswords.gobber_compat.gobber.gobber_greataxe": "고버 그레이트 엑스",
+  "item.simplyswords.gobber_compat.gobber.gobber_chakram": "고버 차크람",
+  "item.simplyswords.gobber_compat.gobber.gobber_scythe": "고버 사이드",
 
-  "item.simplyswords.gobber_compat.gobber_nether.gobber_nether_claymore": "Nether Claymore",
-  "item.simplyswords.gobber_compat.gobber_nether.gobber_nether_cutlass": "Nether Cutlass",
-  "item.simplyswords.gobber_compat.gobber_nether.gobber_nether_glaive": "Nether Glaive",
-  "item.simplyswords.gobber_compat.gobber_nether.gobber_nether_katana": "Nether Katana",
-  "item.simplyswords.gobber_compat.gobber_nether.gobber_nether_longsword": "Nether Longsword",
-  "item.simplyswords.gobber_compat.gobber_nether.gobber_nether_rapier": "Nether Rapier",
-  "item.simplyswords.gobber_compat.gobber_nether.gobber_nether_sai": "Nether Sai",
-  "item.simplyswords.gobber_compat.gobber_nether.gobber_nether_spear": "Nether Spear",
-  "item.simplyswords.gobber_compat.gobber_nether.gobber_nether_twinblade": "Nether Twinblade",
-  "item.simplyswords.gobber_compat.gobber_nether.gobber_nether_warglaive": "Nether Warglaive",
-  "item.simplyswords.gobber_compat.gobber_nether.gobber_nether_greathammer": "Nether Greathammer",
-  "item.simplyswords.gobber_compat.gobber_nether.gobber_nether_greataxe": "Nether Greataxe",
-  "item.simplyswords.gobber_compat.gobber_nether.gobber_nether_chakram": "Nether Chakram",
-  "item.simplyswords.gobber_compat.gobber_nether.gobber_nether_scythe": "Nether Scythe",
+  "item.simplyswords.gobber_compat.gobber_nether.gobber_nether_claymore": "네더 클레이모어",
+  "item.simplyswords.gobber_compat.gobber_nether.gobber_nether_cutlass": "네더 커틀러스",
+  "item.simplyswords.gobber_compat.gobber_nether.gobber_nether_glaive": "네더 글레이브",
+  "item.simplyswords.gobber_compat.gobber_nether.gobber_nether_katana": "네더 카타나",
+  "item.simplyswords.gobber_compat.gobber_nether.gobber_nether_longsword": "네버 롱소드",
+  "item.simplyswords.gobber_compat.gobber_nether.gobber_nether_rapier": "네더 레이피어",
+  "item.simplyswords.gobber_compat.gobber_nether.gobber_nether_sai": "네더 사이",
+  "item.simplyswords.gobber_compat.gobber_nether.gobber_nether_spear": "네더 창",
+  "item.simplyswords.gobber_compat.gobber_nether.gobber_nether_twinblade": "네더 쌍날검",
+  "item.simplyswords.gobber_compat.gobber_nether.gobber_nether_warglaive": "네더 워글레이브",
+  "item.simplyswords.gobber_compat.gobber_nether.gobber_nether_greathammer": "네더 그레이트 해머",
+  "item.simplyswords.gobber_compat.gobber_nether.gobber_nether_greataxe": "네더 그레이트 엑스",
+  "item.simplyswords.gobber_compat.gobber_nether.gobber_nether_chakram": "네더 차크람",
+  "item.simplyswords.gobber_compat.gobber_nether.gobber_nether_scythe": "네더 사이드",
 
-  "item.simplyswords.gobber_compat.gobber_end.gobber_end_claymore": "End Gobber Claymore",
-  "item.simplyswords.gobber_compat.gobber_end.gobber_end_cutlass": "End Gobber Cutlass",
-  "item.simplyswords.gobber_compat.gobber_end.gobber_end_glaive": "End Gobber Glaive",
-  "item.simplyswords.gobber_compat.gobber_end.gobber_end_katana": "End Gobber Katana",
-  "item.simplyswords.gobber_compat.gobber_end.gobber_end_longsword": "End Gobber Longsword",
-  "item.simplyswords.gobber_compat.gobber_end.gobber_end_rapier": "End Gobber Rapier",
-  "item.simplyswords.gobber_compat.gobber_end.gobber_end_sai": "End Gobber Sai",
-  "item.simplyswords.gobber_compat.gobber_end.gobber_end_spear": "End Gobber Spear",
-  "item.simplyswords.gobber_compat.gobber_end.gobber_end_twinblade": "End Gobber Twinblade",
-  "item.simplyswords.gobber_compat.gobber_end.gobber_end_warglaive": "End Gobber Warglaive",
-  "item.simplyswords.gobber_compat.gobber_end.gobber_end_greathammer": "End Gobber Greathammer",
-  "item.simplyswords.gobber_compat.gobber_end.gobber_end_greataxe": "End Gobber Greataxe",
-  "item.simplyswords.gobber_compat.gobber_end.gobber_end_chakram": "End Gobber Chakram",
-  "item.simplyswords.gobber_compat.gobber_end.gobber_end_scythe": "End Gobber Scythe",
+  "item.simplyswords.gobber_compat.gobber_end.gobber_end_claymore": "엔드 고버 클레이모어",
+  "item.simplyswords.gobber_compat.gobber_end.gobber_end_cutlass": "엔드 고버 커틀러스",
+  "item.simplyswords.gobber_compat.gobber_end.gobber_end_glaive": "엔드 고버 글레이브",
+  "item.simplyswords.gobber_compat.gobber_end.gobber_end_katana": "엔드 고버 카타나",
+  "item.simplyswords.gobber_compat.gobber_end.gobber_end_longsword": "엔드 고버 롱소드",
+  "item.simplyswords.gobber_compat.gobber_end.gobber_end_rapier": "엔드 고버 레이피어",
+  "item.simplyswords.gobber_compat.gobber_end.gobber_end_sai": "엔드 고버 사이",
+  "item.simplyswords.gobber_compat.gobber_end.gobber_end_spear": "엔드 고버 창",
+  "item.simplyswords.gobber_compat.gobber_end.gobber_end_twinblade": "엔드 고버 쌍날검",
+  "item.simplyswords.gobber_compat.gobber_end.gobber_end_warglaive": "엔드 고버 워글레이브",
+  "item.simplyswords.gobber_compat.gobber_end.gobber_end_greathammer": "엔드 고버 그레이트 해머",
+  "item.simplyswords.gobber_compat.gobber_end.gobber_end_greataxe": "엔드 고버 그레이트 엑스",
+  "item.simplyswords.gobber_compat.gobber_end.gobber_end_chakram": "엔드 고버 차크람",
+  "item.simplyswords.gobber_compat.gobber_end.gobber_end_scythe": "엔드 고버 사이드",
 
 
   "itemGroup.simplyswords.simplyswords": "Simply Swords",
@@ -439,30 +439,30 @@
 
   "item.simplyswords.onrightclick": "오른쪽 클릭 시:",
   "item.simplyswords.firesworditem.tooltip1": "고유 효과: 유황",
-  "item.simplyswords.firesworditem.tooltip2": "일정 확률로 적중 시 폭발적인 유황을 내뿜습니다.",
+  "item.simplyswords.firesworditem.tooltip2": "적중 시 일정 확률로 폭발적인 유황을 내뿜습니다.",
 
   "item.simplyswords.bramblesworditem.tooltip1": "고유 효과: 덤불가시",
-  "item.simplyswords.bramblesworditem.tooltip2": "일정 확률로 적중 시 독성 포자를 방출하여",
-  "item.simplyswords.bramblesworditem.tooltip3": "주변의 모두를 느리게 만들고 중독시킵니다.",
+  "item.simplyswords.bramblesworditem.tooltip2": "적중 시 일정 확률로 독성 포자를 방출하여",
+  "item.simplyswords.bramblesworditem.tooltip3": "주변 모두를 느리게 만들고 중독시킵니다.",
 
   "item.simplyswords.stormsworditem.tooltip1": "고유 효과: 폭풍",
-  "item.simplyswords.stormsworditem.tooltip2": "비가 오거나 젖었을 때: 일정 확률로 적중 시",
-  "item.simplyswords.stormsworditem.tooltip3": "적에게 번개를 내리칩니다.",
+  "item.simplyswords.stormsworditem.tooltip2": "비가 오거나 젖었을 때: 적중 시 일정 확률로",
+  "item.simplyswords.stormsworditem.tooltip3": "적에게 번개를 내려칩니다.",
 
   "item.simplyswords.watchersworditem.tooltip1": "고유 효과: 징조",
-  "item.simplyswords.watchersworditem.tooltip2": "일정 확률로 적중 시 체력이 %d%%",
-  "item.simplyswords.watchersworditem.tooltip3": "미만인 대상에게 체력을 빼앗고",
+  "item.simplyswords.watchersworditem.tooltip2": "적중 시 일정 확률로 체력이 %d%%",
+  "item.simplyswords.watchersworditem.tooltip3": "미만인 대상으로부터 체력을 빼앗고",
   "item.simplyswords.watchersworditem.tooltip4": "그 체력의 일부를 사용자가 흡수합니다.",
   "item.simplyswords.watchersworditem.tooltip5": "고유 효과: 감시자",
-  "item.simplyswords.watchersworditem.tooltip6": "일정 확률로 적중 시",
-  "item.simplyswords.watchersworditem.tooltip7": "가까운 적의 체력을 빼앗아 사용자를 치유합니다.",
+  "item.simplyswords.watchersworditem.tooltip6": "적중 시 일정 확률로",
+  "item.simplyswords.watchersworditem.tooltip7": "주변 적의 체력을 빼앗아 사용자를 치유합니다.",
 
   "item.simplyswords.plaguesworditem.tooltip1": "고유 효과: 역병",
-  "item.simplyswords.plaguesworditem.tooltip2": "일정 확률로 적중 시",
+  "item.simplyswords.plaguesworditem.tooltip2": "적중 시 일정 확률로",
   "item.simplyswords.plaguesworditem.tooltip3": "이로운 효과를 해로운 효과로 변환시킵니다.",
 
   "item.simplyswords.emberiresworditem.tooltip1": "고유 효과: 엠버 분노",
-  "item.simplyswords.emberiresworditem.tooltip2": "일정 확률로 적중 시 사용자를 화염으로 감싸",
+  "item.simplyswords.emberiresworditem.tooltip2": "적중 시 일정 확률로 사용자를 화염으로 감싸",
   "item.simplyswords.emberiresworditem.tooltip3": "피해를 입히고 힘을 부여합니다.",
   "item.simplyswords.emberiresworditem.tooltip4": "화염을 소모하면, 힘 효과를 잃고",
   "item.simplyswords.emberiresworditem.tooltip5": "화염구를 소환합니다.",
@@ -506,7 +506,7 @@
 
   "item.simplyswords.levitationsworditem.tooltip1": "룬의 힘: 띄우기",
   "item.simplyswords.levitationsworditem.tooltip2": "적중 시 일정 확률로",
-  "item.simplyswords.levitationsworditem.tooltip3": "대상에게 미치는 중력을 역으로 돌려버립니다.",
+  "item.simplyswords.levitationsworditem.tooltip3": "대상에게 미치는 중력을 역으로 바꿉니다.",
   "item.simplyswords.speedsworditem.tooltip1": "룬의 힘: 신속",
   "item.simplyswords.speedsworditem.tooltip2": "적중 시 일정 확률로",
   "item.simplyswords.speedsworditem.tooltip3": "일정 시간 동안 착용자의 이동 속도가 증가합니다.",
@@ -514,7 +514,7 @@
   "item.simplyswords.slownesssworditem.tooltip2": "적중 시 일정 확률로",
   "item.simplyswords.slownesssworditem.tooltip3": "일정 시간 동안 대상을 느리게 만듭니다.",
   "item.simplyswords.freezesworditem.tooltip1": "룬의 힘: 빙결",
-  "item.simplyswords.freezesworditem.tooltip2": "적중 시 일정 확률로 대상을 냉각 시키거나 얼려버립니다.",
+  "item.simplyswords.freezesworditem.tooltip2": "적중 시 일정 확률로 대상을 냉각시키거나 얼려버립니다.",
   "item.simplyswords.wildfiresworditem.tooltip1": "룬의 힘: 도깨비불",
   "item.simplyswords.wildfiresworditem.tooltip2": "적중 시 일정 확률로 대상과 같은 종류인",
   "item.simplyswords.wildfiresworditem.tooltip3": "근처의 모든 엔티티에게 불을 붙입니다."
