Config System Overhaul - Configs completed, except for Gem & Effects configs (not yet in use) - Removal of old config system except for loot black/whitelist - All components hooked to new config - Removal of deprecated class

--- a/common/src/main/resources/assets/simplyswords/lang/en_us.json
+++ b/common/src/main/resources/assets/simplyswords/lang/en_us.json
@@ -968,42 +968,50 @@
   "text.autoconfig.simplyswords_main.option.weapon_attributes.whisperwind_attackSpeed":                                      "Whisperwind attack speed",
 
 
-  "text.autoconfig.simplyswords_main.option.runic_effects.enableActiveDefence.@PrefixText" :                                 "§a[Runic Power Blacklisting]§7\nSetting any of the below values to false will prevent that runic power from being obtainable.",
-  "text.autoconfig.simplyswords_main.option.runic_effects.enableActiveDefence":                                              "Enable Active Defence",
-  "text.autoconfig.simplyswords_main.option.runic_effects.enableFloat":                                                      "Enable Float",
-  "text.autoconfig.simplyswords_main.option.runic_effects.enableGreaterFloat":                                               "Enable Greater Float",
-  "text.autoconfig.simplyswords_main.option.runic_effects.enableFreeze":                                                     "Enable Freeze",
-  "text.autoconfig.simplyswords_main.option.runic_effects.enableShielding":                                                  "Enable Shielding",
-  "text.autoconfig.simplyswords_main.option.runic_effects.enableGreaterShielding":                                           "Enable Greater Shielding",
-  "text.autoconfig.simplyswords_main.option.runic_effects.enableSlow":                                                       "Enable Slow",
-  "text.autoconfig.simplyswords_main.option.runic_effects.enableGreaterSlow":                                                "Enable Greater Slow",
-  "text.autoconfig.simplyswords_main.option.runic_effects.enableStoneskin":                                                  "Enable Stoneskin",
-  "text.autoconfig.simplyswords_main.option.runic_effects.enableGreaterStoneskin":                                           "Enable Greater Stoneskin",
-  "text.autoconfig.simplyswords_main.option.runic_effects.enableSwiftness":                                                  "Enable Swiftness",
-  "text.autoconfig.simplyswords_main.option.runic_effects.enableGreaterSwiftness":                                           "Enable Greater Swiftness",
-  "text.autoconfig.simplyswords_main.option.runic_effects.enableTrailblaze":                                                 "Enable Trailblaze",
-  "text.autoconfig.simplyswords_main.option.runic_effects.enableGreaterTrailblaze":                                          "Enable Greater Trailblaze",
-  "text.autoconfig.simplyswords_main.option.runic_effects.enableWeaken":                                                     "Enable Weaken",
-  "text.autoconfig.simplyswords_main.option.runic_effects.enableGreaterWeaken":                                              "Enable Greater Weaken",
-  "text.autoconfig.simplyswords_main.option.runic_effects.enableZephyr":                                                     "Enable Zephyr",
-  "text.autoconfig.simplyswords_main.option.runic_effects.enableGreaterZephyr":                                              "Enable Greater Zephyr",
-  "text.autoconfig.simplyswords_main.option.runic_effects.enableFrostWard":                                                  "Enable Frost Ward",
-  "text.autoconfig.simplyswords_main.option.runic_effects.enableWildfire":                                                   "Enable Wildfire",
-  "text.autoconfig.simplyswords_main.option.runic_effects.enableUnstable":                                                   "Enable Unstable",
-  "text.autoconfig.simplyswords_main.option.runic_effects.enableMomentum":                                                   "Enable Momentum",
-  "text.autoconfig.simplyswords_main.option.runic_effects.enableGreaterMomentum":                                            "Enable Greater Momentum",
-  "text.autoconfig.simplyswords_main.option.runic_effects.enableImbued":                                                     "Enable Imbued",
-  "text.autoconfig.simplyswords_main.option.runic_effects.enableGreaterImbued":                                              "Enable Greater Imbued",
-  "text.autoconfig.simplyswords_main.option.runic_effects.enablePincushion":                                                 "Enable Pincushion",
-  "text.autoconfig.simplyswords_main.option.runic_effects.enableGreaterPincushion":                                          "Enable Greater Pincushion",
-  "text.autoconfig.simplyswords_main.option.runic_effects.enableWard":                                                       "Enable Ward",
-  "text.autoconfig.simplyswords_main.option.runic_effects.enableImmolate":                                                   "Enable Immolate",
+  "text.autoconfig.simplyswords_main.option.runic_effects.enableActiveDefence.@PrefixText" :                                       "§a[Runic Power Blacklisting]§7\nSetting any of the below values to false will prevent that runic power from being obtainable.",
+  "text.autoconfig.simplyswords_main.option.runic_effects.enableActiveDefence":                                                    "Enable Active Defence",
+  "text.autoconfig.simplyswords_main.option.runic_effects.enableFloat":                                                            "Enable Float",
+  "text.autoconfig.simplyswords_main.option.runic_effects.enableGreaterFloat":                                                     "Enable Greater Float",
+  "text.autoconfig.simplyswords_main.option.runic_effects.enableFreeze":                                                           "Enable Freeze",
+  "text.autoconfig.simplyswords_main.option.runic_effects.enableShielding":                                                        "Enable Shielding",
+  "text.autoconfig.simplyswords_main.option.runic_effects.enableGreaterShielding":                                                 "Enable Greater Shielding",
+  "text.autoconfig.simplyswords_main.option.runic_effects.enableSlow":                                                             "Enable Slow",
+  "text.autoconfig.simplyswords_main.option.runic_effects.enableGreaterSlow":                                                      "Enable Greater Slow",
+  "text.autoconfig.simplyswords_main.option.runic_effects.enableStoneskin":                                                        "Enable Stoneskin",
+  "text.autoconfig.simplyswords_main.option.runic_effects.enableGreaterStoneskin":                                                 "Enable Greater Stoneskin",
+  "text.autoconfig.simplyswords_main.option.runic_effects.enableSwiftness":                                                        "Enable Swiftness",
+  "text.autoconfig.simplyswords_main.option.runic_effects.enableGreaterSwiftness":                                                 "Enable Greater Swiftness",
+  "text.autoconfig.simplyswords_main.option.runic_effects.enableTrailblaze":                                                       "Enable Trailblaze",
+  "text.autoconfig.simplyswords_main.option.runic_effects.enableGreaterTrailblaze":                                                "Enable Greater Trailblaze",
+  "text.autoconfig.simplyswords_main.option.runic_effects.enableWeaken":                                                           "Enable Weaken",
+  "text.autoconfig.simplyswords_main.option.runic_effects.enableGreaterWeaken":                                                    "Enable Greater Weaken",
+  "text.autoconfig.simplyswords_main.option.runic_effects.enableZephyr":                                                           "Enable Zephyr",
+  "text.autoconfig.simplyswords_main.option.runic_effects.enableGreaterZephyr":                                                    "Enable Greater Zephyr",
+  "text.autoconfig.simplyswords_main.option.runic_effects.enableFrostWard":                                                        "Enable Frost Ward",
+  "text.autoconfig.simplyswords_main.option.runic_effects.enableWildfire":                                                         "Enable Wildfire",
+  "text.autoconfig.simplyswords_main.option.runic_effects.enableUnstable":                                                         "Enable Unstable",
+  "text.autoconfig.simplyswords_main.option.runic_effects.enableMomentum":                                                         "Enable Momentum",
+  "text.autoconfig.simplyswords_main.option.runic_effects.enableGreaterMomentum":                                                  "Enable Greater Momentum",
+  "text.autoconfig.simplyswords_main.option.runic_effects.enableImbued":                                                           "Enable Imbued",
+  "text.autoconfig.simplyswords_main.option.runic_effects.enableGreaterImbued":                                                    "Enable Greater Imbued",
+  "text.autoconfig.simplyswords_main.option.runic_effects.enablePincushion":                                                       "Enable Pincushion",
+  "text.autoconfig.simplyswords_main.option.runic_effects.enableGreaterPincushion":                                                "Enable Greater Pincushion",
+  "text.autoconfig.simplyswords_main.option.runic_effects.enableWard":                                                             "Enable Ward",
+  "text.autoconfig.simplyswords_main.option.runic_effects.enableImmolate":                                                         "Enable Immolate",
 
   "text.autoconfig.simplyswords_main.option.loot.enableLootDrops.@Tooltip" :                                                 "Disabling this setting will prevent Simply Swords from generating loot in chests.",
   "text.autoconfig.simplyswords_main.option.loot.enableLootDrops.@PrefixText" :                                              "§6[Loot Blacklisting]§7\nSetting any of the below values to false will prevent that item from generating in loot.\nThe item will still exist in the creative menu, but will be unobtainable through ordinary survival gameplay. ",
   "text.autoconfig.simplyswords_main.option.loot.enableLootDrops":                                                           "Enable loot drops",
   "text.autoconfig.simplyswords_main.option.loot.enableLootInVillages.@Tooltip" :                                            "When enabled, Simply Swords loot can spawn in village chests.",
   "text.autoconfig.simplyswords_main.option.loot.enableLootInVillages":                                                      "Enable loot drops in villages",
+  "text.autoconfig.simplyswords_main.option.loot.standardLootTableWeight.@Tooltip":                                          "Chance for Iron > Gold weapons to appear in chests. 1.00 = 100%.",
+  "text.autoconfig.simplyswords_main.option.loot.standardLootTableWeight":                                                   "Standard loot chance",
+  "text.autoconfig.simplyswords_main.option.loot.rareLootTableWeight.@Tooltip":                                              "Chance for Diamond weapons to appear in chests. 1.00 = 100%.",
+  "text.autoconfig.simplyswords_main.option.loot.rareLootTableWeight":                                                       "Rare loot chance",
+  "text.autoconfig.simplyswords_main.option.loot.runicLootTableWeight.@Tooltip":                                             "Chance for Runic Tablets to appear in chests. 1.00 = 100%.",
+  "text.autoconfig.simplyswords_main.option.loot.runicLootTableWeight":                                                      "Runic loot chance",
+  "text.autoconfig.simplyswords_main.option.loot.uniqueLootTableWeight.@Tooltip":                                            "Chance for Unique weapons to appear in chests. 1.00 = 100%.",
+  "text.autoconfig.simplyswords_main.option.loot.uniqueLootTableWeight":                                                     "Unique loot chance",
   "text.autoconfig.simplyswords_main.option.loot.enableBrimstone":                                                           "Brimstone can be looted",
   "text.autoconfig.simplyswords_main.option.loot.enableTheWatcher":                                                          "The Watcher can be looted",
   "text.autoconfig.simplyswords_main.option.loot.enableStormsEdge":                                                          "Storm's Edge can be looted",
@@ -1032,6 +1040,7 @@
   "text.autoconfig.simplyswords_main.option.loot.enableWhisperwind":                                                         "Whisperwind can be looted",
 
   "text.autoconfig.simplyswords_main.option.general.enableWeaponImpactSounds":                                               "Enable weapon impact sounds",
+  "text.autoconfig.simplyswords_main.option.general.weaponImpactSoundsVolume":                                               "Weapon impact sounds volume",
   "text.autoconfig.simplyswords_main.option.general.enableWeaponFootfalls":                                                  "Enable weapon footfalls",
   "text.autoconfig.simplyswords_main.option.general.enablePassiveParticles":                                                 "Enable passive particles",
   "text.autoconfig.simplyswords_main.option.general.enableUniqueGemSockets.@Tooltip" :                                       "If disabled, gem slots will no longer appear on freshly generated Unique weapons. Not retroactive.",
@@ -1044,9 +1053,9 @@
   "text.autoconfig.simplyswords_main.option.unique_effects.watcherChance":                                                   "Watcher chance",
   "text.autoconfig.simplyswords_main.option.unique_effects.watcherRestoreAmount":                                            "Watcher restore amount",
   "text.autoconfig.simplyswords_main.option.unique_effects.watcherRadius":                                                   "Watcher radius",
-  "text.autoconfig.simplyswords_main.option.unique_effects.OmenChance":                                                      "Omen chance",
-  "text.autoconfig.simplyswords_main.option.unique_effects.OmenRegenerationAmount":                                          "Omen Regeneration amount",
-  "text.autoconfig.simplyswords_main.option.unique_effects.OmenInstantKillThreshold":                                        "Omen instant-kill threshold",
+  "text.autoconfig.simplyswords_main.option.unique_effects.omenChance":                                                      "Omen chance",
+  "text.autoconfig.simplyswords_main.option.unique_effects.omenRegenerationAmount":                                          "Omen Regeneration amount",
+  "text.autoconfig.simplyswords_main.option.unique_effects.omenInstantKillThreshold":                                        "Omen instant-kill threshold",
 
   "text.autoconfig.simplyswords_main.option.unique_effects.stealChance.@PrefixText" :                                        "§6[Soulstealer]§7",
   "text.autoconfig.simplyswords_main.option.unique_effects.stealChance":                                                     "Steal chance",
@@ -1074,9 +1083,9 @@
   "text.autoconfig.simplyswords_main.option.unique_effects.ferocityMaxStacks":                                               "Ferocity max stacks",
   "text.autoconfig.simplyswords_main.option.unique_effects.ferocityStrengthTier":                                            "Ferocity strength amplifier",
 
-  "text.autoconfig.simplyswords_main.option.unique_effects.EmberIreChance.@PrefixText" :                                     "§6[Emberblade]§7",
-  "text.autoconfig.simplyswords_main.option.unique_effects.EmberIreChance":                                                  "Ember Ire chance",
-  "text.autoconfig.simplyswords_main.option.unique_effects.EmberIreDuration":                                                "Ember Ire duration",
+  "text.autoconfig.simplyswords_main.option.unique_effects.emberIreChance.@PrefixText" :                                     "§6[Emberblade]§7",
+  "text.autoconfig.simplyswords_main.option.unique_effects.emberIreChance":                                                  "Ember Ire chance",
+  "text.autoconfig.simplyswords_main.option.unique_effects.emberIreDuration":                                                "Ember Ire duration",
 
   "text.autoconfig.simplyswords_main.option.unique_effects.volcanicFuryChance.@PrefixText" :                                 "§6[Hearthflame]§7",
   "text.autoconfig.simplyswords_main.option.unique_effects.volcanicFuryChance":                                              "Volcanic Fury chance",
