Optimize and clean up more code
Optimize NetherfusedGemItem, RunefusedGemItem, RunicSwordItem, HelperMethods and RunicMethods
+ Add tooltip text for unidentified netherfused gems
+ Fix imbued runic power being impossible to get on runic weapons and runefused gems

--- a/common/src/main/resources/assets/simplyswords/lang/en_us.json
+++ b/common/src/main/resources/assets/simplyswords/lang/en_us.json
@@ -771,6 +771,7 @@
   "item.simplyswords.immolationsworditem.tooltip3":                                                                     "damaging you and nearby foes. Outgoing ",
   "item.simplyswords.immolationsworditem.tooltip4":                                                                     "damage scales with your current HP.",
   "item.simplyswords.unidentifiedsworditem.tooltip1":                                                                   "Runic Power: ????",
+  "item.simplyswords.netherfused_gem.tooltip1":                                                                         "Nether Power: ????",
   "item.simplyswords.unidentifiedsworditem.tooltip2":                                                                   "Click to identify.",
   "item.simplyswords.runic_tablet.tooltip":                                                                             "Can be used to craft and",
   "item.simplyswords.runic_tablet.tooltip2":                                                                            "re-roll Runic weapons.",
